--- a/readme.textile
+++ b/readme.textile
@@ -1,11 +1,26 @@
 h1. Logos
 
-A Logic Programming library for Clojure. At it's heart is an implementation of miniKanren as described in William Byrd's dissertation Relational Programming in miniKanren: Techniques, Applications, and Implementations.
+A Logic Programming library for Clojure. At it's heart is an implementation of miniKanren as described in William Byrd's dissertation "Relational Programming in miniKanren: Techniques, Applications, and Implementations":http://gradworks.umi.com/33/80/3380156.html. It's also described in great detail in the "The Reasoned Schemer":http://mitpress.mit.edu/catalog/item/default.asp?ttype=2&tid=10663.
 
 h2. About
 
-This library is under heavily development as I cover the ideas in Byrd's thesis and other sources on Logic Programming.
+This library is under heavily development as I cover the ideas in Byrd's thesis and other sources on logic programming. It currently only supports Clojure 1.3.0 alphas.
 
-This is not the first implementation of miniKanren in Clojure. Jim Duey's can be found here. The main difference is that I worked from the descriptions and source in dissertation and not the miniKanren source found on the web.
+This is not the first implementation of miniKanren in Clojure. Jim Duey's version can be found "here":https://github.com/jduey/mini-kanren. It got me interested in logic programming in the first place. The main difference from this implementation is that I worked from the descriptions and source found in the dissertation and not the miniKanren source currently available on the web.
 
-The other difference is that is that I'm specifically interested in performance. The current version runs significantly faster than the current Clojure implementation. It can also perform unification significantly faster than Fogus's clojure.unify.
+h2. Goals
+
+* Performance. The current version runs significantly faster than Jim Duey's implementation. It can also perform unification significantly faster than Fogus's clojure.unify.
+* Emphasis on pure relational programming.
+* Parallel logic programming.
+
+h2. Examples
+
+<pre>
+(run* [q]
+        (rest-o q [1 2])) ; [(_.0 1 2)]o
+</pre>
+
+<pre>
+(unifier' '(?x ?y ?z ?&r) '(1 2 3 4 5 6 7 8 9 0)) ; (1 2 3 (4 5 6 7 8 9 0))
+</pre>
