* readme.textile: added notes

--- a/readme.textile
+++ b/readme.textile
@@ -8,7 +8,13 @@ This library is under heavily development as I cover the ideas in Byrd's thesis 
 
 There are most certainly bugs. I hope to iron out a solid core version with numerous tests before working on alternate implementations (which will most likely be done in branches).
 
-This is not the first implementation of miniKanren in Clojure. Jim Duey's version can be found "here":https://github.com/jduey/mini-kanren. His work on that got me interested in logic programming in the first place. The main difference from this implementation is that I worked from the descriptions and source found in the dissertation and not the miniKanren source currently available on the web.
+This is not the first implementation of miniKanren in Clojure. Jim Duey's version can be found "here":https://github.com/jduey/mini-kanren. His work on that got me interested in logic programming in the first place.
+
+h2. Notes
+
+The main difference from this Jim Duey's implementation is that I stayed pretty true to the structure of the original implementation. There's a small bit of novelty to the substitutions implementation and most of the non-trivial core functions have been changed to deal with the fact that Clojure uses a variety of data structures to represent source. Also since Clojure doesn't have Scheme pairs I added the idea the of "rest" logical vars.
+
+The chunk that remains the unchanged from the implementation found in the disseration is the code relating to goals and goal constructors. There's quite a bit of clever macro magic there which makes miniKanren code efficient.
 
 h2. Goals
 
