--- a/readme.textile
+++ b/readme.textile
@@ -14,7 +14,7 @@ h2. Notes
 
 The main difference from this Jim Duey's implementation is that I stayed pretty true to the structure of the original implementation. There's a small bit of novelty to the substitutions implementation and most of the non-trivial core functions have been changed to deal with the fact that Clojure uses a variety of data structures to represent source. Also since Clojure doesn't have Scheme pairs I added the idea the of "rest" logical vars.
 
-The chunk that remains the unchanged from the implementation found in the disseration is the code relating to goals and goal constructors. There's quite a bit of clever macro magic there which makes miniKanren code efficient.
+The chunk that remains the mostly unchanged from the implementation found in the dissertation is code related to goals and goal constructors. There's quite a bit of clever macro magic there which makes miniKanren code efficient.
 
 h2. Goals
 
