--- a/readme.textile
+++ b/readme.textile
@@ -36,6 +36,18 @@ h2. Examples
 </pre>
 
 <pre>
+(run 5 [x]
+  (exist [&y]
+    (append-o (list 'cake &y) '(d t) x)))
+
+;; [(cake _.0 d t)
+;;  (cake _.0 _.1 d t)
+;;  (cake _.0 _.1 _.2 d t)
+;;  (cake _.0 _.1 _.2 _.3 d t)
+;;  (cake _.0 _.1 _.2 _.3 _.4 d t)]
+</pre>
+
+<pre>
 (unifier' '(?x ?y ?z) '(1 2 ?y)) ; (1 2 _.0)
 </pre>
 
