--- a/design.org
+++ b/design.org
@@ -39,3 +39,33 @@
 
     What if we use LCons here ? LCons type is weak, always unify to
     the type that isn't an LCons ?
+** LCons
+*** Trying to overload cons seems like a bad idea
+    Need to implement key interface and this requires a deeper
+    knowledge of the relationships between various fns and
+    datastructures than I currently have. The problem is the Cons
+    expects something that really is a Seq not just just something
+    that pretends to be one.
+*** We now have something that be treatd as an ISeq or IPair
+    traversing it does require one more check?
+
+    (nseq? (LCons. 'a (lvar 'x))) ; false
+    (seq? (LCons. 'a (LCons 'b (lvar 'x)))) ; true
+    (seq? (rhs (LCons. 'a (lvar 'x)))) ; false
+*** Now need to understand the performance implications
+    Looking at PersistentList, equality between two list is
+    linear in their legnth
+    Looking at PersistentVector, equality between two small
+    vectors is slower than two small PersistentLists
+    
+    (== (lcons 'a (lvar 'd)) '(a d))
+    Unification, the above should unify the lvar to 'd
+
+    (== (lcons 'a (lvar 'd)) (lvar 'q)))
+    Reification
+    We just fetch the LCons, this is correct.
+*** implement printing    
+*** implement equiv
+    should see how persistent lists do it.
+*** implement equals
+*** implmenet hashCode    
