--- a/readme.textile
+++ b/readme.textile
@@ -12,9 +12,17 @@ This is not the first implementation of miniKanren in Clojure. Jim Duey's versio
 
 h2. Notes
 
-I stayed pretty true to the structure of the original implementation. However there's some originality to the substitutions implementation and most of the non-trivial core functions have been significantly changed to deal with the fact that Clojure uses a variety of data structures (instead of just lists) to represent source. Also Clojure's cons operator differs significantly from Scheme's so I added the LConsSeq protocol. All iterable Clojure data structures are extended to this protocol.
+I stayed pretty true to the structure of the original implementation. However there's some originality to the substitutions implementation and most of the non-trivial core functions have been significantly changed to deal with the fact that Clojure uses a variety of data structures (instead of just lists) to represent source. Also Clojure's cons operator differs significantly from Scheme's so I added the <code>LConsSeq</code> protocol. All iterable Clojure data structures are extended to this protocol. Sequences which end in a logic variables can be represented by using <code>lcons</code>
 
-The goal and goal constructor portion of the origin implementation has been adapted to protocols (IBind, IMPlus) and deftypes (MZero, Unit, Inc, Choice). <code>take</code> has been changed to return a Clojure vector of answers. 
+<pre>
+(lcons 'a (lvar 'b)) ; (a . <lvar:b>)
+</pre>
+
+Logic variables are istances of <code>lvarT</code> not vectors as they are Scheme.
+
+The goal and goal constructor portion of the original implementation has been adapted to protocols (<code>IBind</code>, <code>IMPlus</code>) and deftypes (<code>MZero</code>, <code>Unit</code>, <code>Inc</code>, <code>Choice</code>). <code>take</code> has been changed to return a Clojure vector of answers.
+
+Currently the <code>Substitutions</code> uses <code>clojure.lang.PersistentHashMap</code> internally. This will probably be substituted with something more suitable for triangular substitutions. I'll be investigating Skew Binary Random Access Lists as well as Finger Trees (Okasaki).
 
 h2. Goals
 
