--- a/readme.textile
+++ b/readme.textile
@@ -22,7 +22,7 @@ Logic variables are istances of <code>lvarT</code> not vectors as they are Schem
 
 The goal and goal constructor portion of the original implementation has been adapted to protocols (<code>IBind</code>, <code>IMPlus</code>) and deftypes (<code>MZero</code>, <code>Unit</code>, <code>Inc</code>, <code>Choice</code>). <code>take</code> has been changed to return a Clojure vector of answers.
 
-Currently the <code>Substitutions</code> uses <code>clojure.lang.PersistentHashMap</code> internally. This will probably be substituted with something more suitable for triangular substitutions. I'll be investigating Skew Binary Random Access Lists as well as Finger Trees (Okasaki).
+Currently the <code>Substitutions</code> uses <code>clojure.lang.PersistentHashMap</code> internally. This will probably be replaced with something more suitable for triangular substitutions. I'll be investigating Skew Binary Random Access Lists as well as Finger Trees (Okasaki).
 
 h2. Goals
 
