--- a/readme.textile
+++ b/readme.textile
@@ -25,11 +25,11 @@ I stayed pretty true to the structure of the original implementation. However th
 (lcons 'a (lvar 'b)) ; (a . <lvar:b>)
 </pre>
 
-Logic variables are istances of <code>lvarT</code> not vectors as they are in Scheme.
+Logic variables are instances of <code>lvarT</code> not vectors as they are in Scheme.
 
-The goal and goal constructor portion of the original implementation has been adapted to protocols (<code>IBind</code>, <code>IMPlus</code>) and deftypes (<code>MZero</code>, <code>Unit</code>, <code>Inc</code>, <code>Choice</code>). <code>take</code> has been changed to return a Clojure vector of answers.
+The goal and goal constructor portion has been written from scratch on top of the protocols <code>IBind</code> and <code>IMPlus</code>. These are extended to the relevant types (<code>nil (mzero)</code>, <code>Substitution (unit)</code>, <code>clojure.lang.Cons (stream)</code>, <code>clojure.lang.PersistentList (stream)</code>, <code>clojure.lang.LazySeq (stream)<code>). <code>take</code> is used to get the sequence of results.
 
-Currently the <code>Substitutions</code> defrecord uses <code>clojure.lang.PersistentHashMap</code> internally. This will probably be replaced with something more suitable for triangular substitutions. I'll be investigating Skew Binary Random Access Lists as well as Finger Trees (Okasaki).
+Currently the <code>Substitutions</code> defrecord uses <code>clojure.lang.PersistentHashMap</code> internally. This may be replaced with something that provides better performance for triangular substitutions. I'll be investigating Skew Binary Random Access Lists as well as Finger Trees (Okasaki).
 
 h2. Goals
 
